<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidlinux.class5_creditcardhelper.MainActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="400dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/textBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_card_balance" />

                <EditText
                    android:id="@+id/editBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textInterest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_yearly_interest_rate" />

                <EditText
                    android:id="@+id/editInterest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_minimum_payment" />

                <EditText
                    android:id="@+id/editMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>


            <TableRow android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textFinalBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/final_card_balance" />

                <EditText
                    android:id="@+id/editFinalBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textMonths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/months_remaining"
                    tools:text="Months Remaining" />

                <EditText
                    android:id="@+id/editMonths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textInterestPaid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interest_will_be_paid" />

                <EditText
                    android:id="@+id/editInterestPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/compute" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clear" />
            </TableRow>

        </TableLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
